--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.19.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/express-handlebars": "^0.0.33",
-    "@types/sequelize": "^4.28.5"
+    "@types/sequelize": "^4.28.5",
+    "@types/jsonwebtoken": "^8.3.5"
   },
   "description": ""
 }
