--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
   "homepage": "https://github.com/kushapusha/owu_node.js#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.5",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.7.0",
     "nodemailer": "^6.3.1",
-    "sequelize": "^5.19.5"
+    "sequelize": "^5.19.5",
+    "fs-extra": "^8.1.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/express-handlebars": "^0.0.33",
     "@types/sequelize": "^4.28.5",
     "@types/jsonwebtoken": "^8.3.5",
-    "@types/nodemailer": "^6.2.1"
+    "@types/nodemailer": "^6.2.1",
+    "@types/express-fileupload": "^1.1.0",
+    "@types/fs-extra": "^8.0.1",
+    "@types/uuid": "^3.4.5"
   },
   "description": ""
 }
