--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.5",
     "express-handlebars": "^3.1.0",
+    "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.7.0",
     "nodemailer": "^6.3.1",
     "sequelize": "^5.19.5",
-    "fs-extra": "^8.1.0",
+    "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
@@ -35,7 +36,8 @@
     "@types/nodemailer": "^6.2.1",
     "@types/express-fileupload": "^1.1.0",
     "@types/fs-extra": "^8.0.1",
-    "@types/uuid": "^3.4.5"
+    "@types/uuid": "^3.4.5",
+    "@types/socket.io": "^2.1.4"
   },
   "description": ""
 }
